--- a/style.css
+++ b/style.css
@@ -1,193 +1,76 @@
-*{ padding:0; margin:0; box-sizing: border-box; font-family: sans-serif; }
-header{
-	width: 100%;
-	height: 100vh;
-}
-
-html{
-	scroll-behavior: smooth;
-}
-nav{
-	width: 100%;
-	height: 70px;
-	border-bottom: 1px solid grey;
-	box-shadow: 2px 0px 5px grey;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	position: fixed;
-	top:0;
-	z-index: 1;
-	background: white;
-}
-.logo{
-	font-size: 35px;
-	font-weight: bold;
-}
-
-.menu a{
-	text-decoration: none;
-	font-size: 20px;
-	color: black;
-	padding: 10px 20px;
-	margin:5px;
-	font-weight: bold;
-}
-.menu a:last-child{
-	background: black;
-	color: white;
-}
-.container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transform-style: preserve-3d;
-	transform-origin: center;
-	perspective: 2000px;
-}
-
-.left{
-	flex-basis: 50%;
-	animation: animate 3s linear infinite;
-}
-.left img{
-	width: 100%;
-	padding-top: 100px;
-}
-
-@keyframes animate{
-	0%{
-		transform: scale(1.1);
-	}
-		50%{
-		transform: scale(1);
-	}
-		100%{
-		transform: scale(1.1);
-	}
-}
-
-.right{
-	flex-basis: 50%;
-	max-width: 400px;
-	margin-left: 100px;
-}
-
-.right h1{
-	font-size: 50px;
-}
-.right p{
-	font-size: 25px;
-	margin:20px 0px;
-}
-button{
-	background: black;
-	color: white;
-	font-weight: bold;
-	border: none;
-	outline: none;
-	padding: 10px 20px;
-	margin-bottom: 20px;
-}
-
-#featured{
-	padding: 50px 0px;
-	font-size: 30px;
-	text-align: center;
-
-}
-
-
-.wrapper{
-	display: grid;
-	grid-template-columns: repeat(4,20%);
-	grid-auto-rows: minmax(200px,auto);
-	grid-gap: 1em;
-	justify-content: center;
-	margin-top:10px;
-	align-items: center;
-}
-.wrapper>div{
-	border:1px solid grey;
-	position: relative;
-	overflow: hidden;
-}
-.wrapper> div img{
-	width: 100%;
+body{
+	background-image:url('abc.jpg');
+	background-repeat:no-repeat;
+	background-position:right;
+	background-size:cover;
+	
+	
 	
 }
 
-.box1{
-	grid-row: 1/3;
-	grid-column: 1/3;
+* {box-sizing: border-box}
+
+/* Full-width input fields */
+  input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: 2;
+  background: #f1f1f1;
 }
 
-.price{
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: black;
-	color: white;
-	font-size: 20px;
-
-}
-.wrapper> div img:hover{
-	transform: scale(1.2);
-	transition: 0.4s linear;
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
 }
 
-#man{
-	padding: 80px 0px;
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
 }
 
-.man-row{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-.man-box{
-	flex-basis: 15%;
-	box-shadow: 2px 3px 5px grey;
-	padding: 10px;
-	text-align: center;
-}
-
-.man-box img{
-	width: 100%;
-}
-.man-box h2{
-	margin:20px 0px;
-}
-.man-box h3{
-	background: black;
-	color: white;
-	padding: 10px;
-}
-.man-box:hover{
-	transform: translateY(-20px);
-	transition: 0.4s ease;
-}
-#women{
-	padding: 100px 0px;
-}
-#footer{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	background: black;
-	color: white;
-	padding: 10px;
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
 }
 
+button:hover {
+  opacity:1;
+}
 
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
 
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn, .signupbtn {
+  float: left;
+  width: 25%;
+}
 
+/* Add padding to container elements */
+.container {
+  padding: 16px;
+}
 
-
-
-
-
-
-
-
-
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+    width: 100%;
+  }
+}
